--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "1.0.5",
     "class-variance-authority": "^0.6.0",
     "classnames": "^2.3.2",
+    "date-fns": "^2.30.0",
     "firebase": "^9.21.0",
     "immer": "^10.0.1",
     "react": "^18.2.0",
+    "react-day-picker": "^8.7.1",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.8.0",
