--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@radix-ui/react-popover": "1.0.5",
+    "@headlessui/react": "^1.7.14",
     "class-variance-authority": "^0.6.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
